--- a/i3/i3.config
+++ b/i3/i3.config
@@ -1,10 +1,10 @@
 # i3 config file (v4)
 set $mod Mod1
 
-font pango: hack 20
-# This font is widely installed, provides lots of unicode glyphs, right-to-left
-# text rendering and scalability on retina/hidpi displays (thanks to pango).
-#font pango:DejaVu Sans Mono 8
+font pango: Ubuntu Mono 20
+
+gaps inner 20
+gaps outer 20
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -115,7 +115,9 @@ assign [class="discord"] $workspace9
 
 for_window [class="Chromium-browser"] $workspace3
 for_window [class="Chromium-browser"] focus 
+for_window [class="^.*"] border pixel 0
 
+focus_follows_mouse no
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -126,34 +128,51 @@ bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcu
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
-        # These bindings trigger as soon as you enter the resize mode
-
-        # Pressing left will shrink the window’s width.
-        # Pressing right will grow the window’s width.
-        # Pressing up will shrink the window’s height.
-        # Pressing down will grow the window’s height.
-        bindsym j resize shrink width 10 px or 10 ppt
+    bindsym j resize shrink width 10 px or 10 ppt
         bindsym k resize grow height 10 px or 10 ppt
         bindsym l resize shrink height 10 px or 10 ppt
         bindsym semicolon resize grow width 10 px or 10 ppt
 
-        # same bindings, but for the arrow keys
+# same bindings, but for the arrow keys
         bindsym Left resize shrink width 10 px or 10 ppt
         bindsym Down resize grow height 10 px or 10 ppt
         bindsym Up resize shrink height 10 px or 10 ppt
         bindsym Right resize grow width 10 px or 10 ppt
 
-        # back to normal: Enter or Escape
+# back to normal: Enter or Escape
         bindsym Return mode "default"
         bindsym Escape mode "default"
 }
 
 bindsym $mod+r mode "resize"
 
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
+set $bg-active      #4084D6
+set $bg-inactive    #4E5467
+set $bord-active    #4084D6
+set $bord-inactive  #3C4150
+set $text-active    #FFFFFF
+set $text-inactive  #4084D6
+set $bg-urgent      #f90707
+
+# set colors
+# class                 border              background      text            indicator       child_border
+client.focused          $bord-active        $bg-active      $text-active    $bord-active    $bg-active
+client.focused_inactive $bord-inactive      $bg-inactive    $text-inactive  $bord-inactive  $bg-inactive
+client.unfocused        $bord-inactive      $bg-inactive    $text-inactive  $bord-inactive  $bg-inactive
+client.urgent           $bord-active        $bg-urgent      $text-active    $bord-active    $bg-active
+
+
 bar {
-        status_command i3status
+    position top
+        colors {
+            background  $bord-inactive
+#               class               border          background          text
+                focused_workspace   $bord-active    $bg-inactive        $text-inactive
+                active_workspace    $bg-inactive    $bg-inactive        $text-inactive
+                inactive_workspace  $bg-inactive    $bg-inactive        $text-inactive
+
+        }
+    status_command i3status
 }
 
 # Pulse Audio controls
@@ -170,9 +189,6 @@ bindsym XF86TouchpadToggle exec ./toggletouchpad.sh # toggle touchpad
 
 exec discord 
 exec_always feh --bg-scale ~/dotfiles/wallpaper.jpg
+exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 #~/Pictures/wallpaper/animebg1.jpg
 
-gaps inner 20
-gaps outer 20
-
-for_window [class="^.*"] border pixel 0
