Various Xresources additions

--- a/i3/i3.config
+++ b/i3/i3.config
@@ -10,7 +10,7 @@ gaps outer 20
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec urxvt
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -74,13 +74,13 @@ bindsym $mod+a focus parent
 set $workspace1 "1 "
 set $workspace2 "2 "
 set $workspace3 "3 "
-set $workspace4 "4 "
-set $workspace5 "5 "
-set $workspace6 "6 "
-set $workspace7 "7 "
-set $workspace8 "8 "
+set $workspace4 "4"
+set $workspace5 "5"
+set $workspace6 "6"
+set $workspace7 "7"
+set $workspace8 "8"
 set $workspace9 "9 "
-set $workspace10 "10 "
+set $workspace10 "10"
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace $workspace1
@@ -115,7 +115,7 @@ assign [class="discord"] $workspace9
 
 for_window [class="Chromium-browser"] $workspace3
 for_window [class="Chromium-browser"] focus 
-for_window [class="^.*"] border pixel 0
+for_window [class="^.*"] border pixel 3
 
 focus_follows_mouse no
 
@@ -162,18 +162,18 @@ client.unfocused        $bord-inactive      $bg-inactive    $text-inactive  $bor
 client.urgent           $bord-active        $bg-urgent      $text-active    $bord-active    $bg-active
 
 
-bar {
-    position top
-        colors {
-            background  $bord-inactive
+#bar {
+ #   position top
+ #      colors {
+ #         background  $bord-inactive
 #               class               border          background          text
-                focused_workspace   $bord-active    $bg-inactive        $text-inactive
-                active_workspace    $bg-inactive    $bg-inactive        $text-inactive
-                inactive_workspace  $bg-inactive    $bg-inactive        $text-inactive
+ #                        focused_workspace   $bord-active    $bg-inactive        $text-inactive
+ #                        active_workspace    $bg-inactive    $bg-inactive        $text-inactive
+ #                        inactive_workspace  $bg-inactive    $bg-inactive        $text-inactive
 
-        }
-    status_command i3status
-}
+ #                }
+ #            status_command i3status
+#}
 
 # Pulse Audio controls
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
@@ -191,4 +191,4 @@ exec discord
 exec_always feh --bg-scale ~/dotfiles/wallpaper.jpg
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 #~/Pictures/wallpaper/animebg1.jpg
-
+exec_always xrdb -merge $HOME/.Xresources
