various modifications to vimrc and i3config

--- a/i3/i3.config
+++ b/i3/i3.config
@@ -10,7 +10,7 @@ gaps outer 20
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec urxvt
+bindsym $mod+Return exec gnome-terminal
 
 # kill focused window
 bindsym $mod+Shift+q kill
