--- a/i3/i3.config
+++ b/i3/i3.config
@@ -189,6 +189,6 @@ bindsym XF86TouchpadToggle exec ./toggletouchpad.sh # toggle touchpad
 
 exec discord 
 exec_always feh --bg-scale ~/dotfiles/wallpaper.jpg
-exec_always --no-startup-id $HOME/.config/polybar/launch.sh
+#exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 #~/Pictures/wallpaper/animebg1.jpg
 exec_always xrdb -merge $HOME/.Xresources
